--- a/composer.json
+++ b/composer.json
@@ -2,12 +2,12 @@
   "name": "yourname/fcl-behavior-automation",
   "description": "Behavior-based modals/banners using FCL in WordPress.",
   "type": "wordpress-plugin",
-  "require": {
-    "infobipcth/forms-computed-language": "^1.0"
-  },
   "autoload": {
     "psr-4": {
       "FCLBA\\": "inc/"
     }
+  },
+  "require": {
+    "infobipcth/forms-computed-language": "1.0"
   }
 }
